4.0 regression: VDPAU decoding fails without GL
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont changed milestone to %4.0
changed milestone to %4.0
- Rémi Denis-Courmont added Component::Decoders Hw Platform::GNU/Linux labels
added Component::Decoders Hw Platform::GNU/Linux labels
- Maintainer
I guess it happened when we moved to dec-device. I don't remember everything we said during the decdev workshop but I thought we didn't care about HW decoding without GL/D3D/VK.
- Rémi Denis-Courmont assigned to @Courmisch
assigned to @Courmisch
- Rémi Denis-Courmont mentioned in merge request !1203 (merged)
mentioned in merge request !1203 (merged)
- Thomas Guillem mentioned in issue #26478 (closed)
mentioned in issue #26478 (closed)
- Hugo Beauzée-Luyssen closed with merge request !1203 (merged)
closed with merge request !1203 (merged)
- Rémi Denis-Courmont closed with commit fae5234d
closed with commit fae5234d
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
Please register or sign in to reply