vdpau: add working decoder device module (fixes #26385)

This associates the correct X11 screen and does not depend on GL for no
particular reasons.